[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/point_1.png" type="Texture" id=1]
[ext_resource path="res://scripts/FigureTextures.gd" type="Script" id=2]

[node name="FigureTextures" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 92 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line1" type="TextureRect" parent="."]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
texture = ExtResource( 1 )

[node name="Line2" type="TextureRect" parent="."]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 20 )
texture = ExtResource( 1 )

[node name="Line3" type="TextureRect" parent="."]
margin_top = 48.0
margin_right = 60.0
margin_bottom = 68.0
rect_min_size = Vector2( 60, 20 )
texture = ExtResource( 1 )

[node name="Line4" type="TextureRect" parent="."]
margin_top = 72.0
margin_right = 60.0
margin_bottom = 92.0
rect_min_size = Vector2( 60, 20 )
texture = ExtResource( 1 )
